--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/lynnmrad/lynn/blob/main/010024484-uifquikazykxhsiogcykugiuocmtef.pdf">Click Here Event info</a></p>
+  <p><a href="010024484-uifquikazykxhsiogcykugiuocmtef.pdf">Click Here Event info</a></p>
 </html>
